--- a/DHUCoinSmartContract/css/main.css
+++ b/DHUCoinSmartContract/css/main.css
@@ -1,34 +1,128 @@
 body {
-    background-color:#F0F0F0;
+    background-color: #3587a4;
     padding: 2em;
     font-family: 'Raleway','Source Sans Pro', 'Arial';
 }
+
+.navbar {
+    color: white;
+    overflow: hidden;
+    background-color: #88ccf1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+}
+
+    .navbar a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+        .navbar a:hover {
+            background: #ddd;
+            color: black;
+        }
+
 .container {
-    width: 50%;
-    margin: 0 auto;
+    width: 80%;
+    margin: 70px auto 0 auto;
+    background-color: #c1dff0;
+    padding: 5em 5em 0 5em;
+    top: 40px;
 }
+
 label {
-    display:block;
-    margin-bottom:10px;
+    display: block;
+    margin-bottom: 10px;
 }
+
 input {
-    padding:10px;
+    padding: 10px;
     width: 50%;
     margin-bottom: 1em;
 }
-button {
+
+.button {
     margin: 2em 0;
     padding: 1em 4em;
-    display:block;
+    border-radius: 5px;
+    background-color: #b7e0f6;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #808080;
+    margin: 1em 0;
+    padding: 0;
 }
 
 #instructor {
-    padding:1em;
-    background-color:#fff;
+    padding: 1em;
+    background-color: #fff;
     margin: 1em 0;
 }
 
 #loader {
     width: 100px;
-    display:none;
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+}
+
+#floatButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #3dbdbf;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 100%;
+    font-size: 18px;
+}
+
+    #floatButton:hover {
+        background-color: #555;
+    }
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: smaller;
+    }
+
+    .container {
+        width: 90%;
+        margin: 50px auto 0 auto;
+        background-color: #c1dff0;
+        padding: 1em;
+    }
+
+    .navbar {
+        font-size: x-small;
+    }
+
+    .button {
+        width: 100%;
+        margin: 1em 0;
+    }
+
+    .fitTextBox {
+        width: 90%;
+    }
 }
